--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react": "^18.0.0-alpha-edfe50510-20210823",
+    "react-dom": "^18.0.0-alpha-edfe50510-20210823",
+    "react-scripts": "^4.0.3",
+    "styled-components": "^5.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
